export enum CATEGORIA {
  ENTRADA,
  PLATO_PRINCIPAL,
  BEBIDA,
  POSTRE
}